spacing fix+

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   .card-body,
   .card {
 	max-width: 450px;
-	min-width: 280px;
+	min-width: 220px;
   }
 
   .check-label{
